test/scc_test/stmt/semantic-errors/017.a
017.t:4:12: error: expression must have integral type